--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,7 +10,7 @@ rules:
   accessor-pairs: 2
   array-bracket-spacing:
     - 2
-    - never
+    - always
   array-callback-return: 2
   arrow-body-style: 2
   arrow-parens: 2
@@ -83,6 +83,7 @@ rules:
   no-caller: 2
   no-catch-shadow: 2
   no-confusing-arrow: 2
+  no-console: 1
   no-continue: 2
   no-div-regex: 2
   no-else-return: 2
@@ -167,7 +168,7 @@ rules:
   padded-blocks: 0
   prefer-arrow-callback: 2
   prefer-const: 2
-  prefer-reflect: 2
+  prefer-reflect: 0
   prefer-rest-params: 2
   prefer-spread: 2
   prefer-template: 0
@@ -176,7 +177,7 @@ rules:
   radix: 2
   require-jsdoc: 0
   require-yield: 2
-  semi: 0
+  semi: 2
   semi-spacing:
     - 2
     - after: true
@@ -195,7 +196,9 @@ rules:
   template-curly-spacing:
     - 2
     - always
-  valid-jsdoc: 2
+  valid-jsdoc:
+    - 2
+    - requireReturn: false
   vars-on-top: 2
   wrap-iife: 2
   wrap-regex: 0
